# cpuOBJRenderer

./: CMakeLists.txt  README.md
include/: matrices.hpp  readObj.hpp  screenRender.hpp
src/: main.cpp  matrices.cpp  matrices.hpp  readObj.cpp  screenRender.cpp  screenRender.hpp
